<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="stEL3453" Id="{76ec69f5-1f63-4962-a33e-67bcf68005c6}">
    <Declaration><![CDATA[TYPE stEL3453 :
STRUCT
	Lx 			: ARRAY[1..3] OF stEL3453_ch;
	Total 		: stEL3453_tot;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>