<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="stEL3453_ch" Id="{a03a42f2-f1de-4114-bca4-f4c8b918dd33}">
    <Declaration><![CDATA[TYPE stEL3453_ch :
STRUCT
	fULrms		: REAL;  //[V]
	fUL_peak 	: REAL;  //[V]
	ulUL_ZC		: ULINT;  //[ns]
	fULrms_min	: REAL; //[V]
	fULrms_max	: REAL; //[V]
	fUL_THD		: REAL; //[% of fundamental rms]
	fULrms_fund	: REAL; //[V]
	fUL_harm	: ARRAY [0..63] OF REAL; //[% of fundamental rms]
	fUL_harmrf	: REAL;  //[Hz]
	
	fIrms 		: REAL; //[A]
	fI_peak		: REAL; //[A]
	ulI_ZC		: ULINT; //[ns]
	fIrms_min	: REAL;  //[A]
	fIrms_max	: REAL;  //[A]
	fI_THD		: REAL;  //[% of fundamental rms]
	fI_TDD		: REAL;  //[% of max rms]
	fIrms_fund	: REAL;  //[A]
	fIL_harm	: ARRAY [0..63] OF REAL;  //[% of fundamental rms]
	fIL_harmrf	: REAL;  //[Hz]
	
	fFreq		: REAL; //[Hz]
	fPhi		: REAL; //[°]
	fCosPhi		: REAL; //[ ]
	fPF			: REAL; //[ ]
	
	fP			: REAL; //[W]
	fP_avg		: REAL; //[W]
	fP_min		: REAL; //[W]
	fP_max		: REAL; //[W]
	fP_fund		: REAL; //[W]
	
	fS			: REAL; //[VA]
	fS_avg		: REAL; //[VA]
	fS_min		: REAL; //[VA]
	fS_max		: REAL; //[VA]
	fS_fund		: REAL; //[VA]
	
	fQ			: REAL; //[VAR]
	fQ_avg		: REAL; //[VAR]
	fQ_min		: REAL; //[VAR]
	fQ_max		: REAL; //[VAR]
	fQ_fund		: REAL; //[VAR]
	
	lEP 		: LINT;  //[mWh]
	ulEP_pos	: ULINT; //[mWh]
	ulEP_neg	: ULINT; //[mWh]
	
	lES 		: LINT; //[mVAh]
	ulES_pos	: ULINT; //[mVAh]
	ulES_neg	: ULINT; //[mVAh]
	
	lEQ			: LINT; //[mVArh]
	ulEQ_pos	: ULINT; //[mVArh]
	ulEQ_neg	: ULINT; //[mVArh]
	
	lEP_fund		: LINT; //[mWh]
	ulEP_fund_pos	: ULINT; //[mWh]
	ulEP_fund_neg	: ULINT; //[mWh]
	
	lES_fund 		: LINT; //[mVAh]
	ulES_fund_pos	: ULINT; //[mVAh]
	ulES_fund_neg	: ULINT; //[mVAh]
	
	lEQ_fund		: LINT; //[mVArh]
	ulEQ_fund_pos	: ULINT; //[mVArh]
	ulEQ_fund_neg	: ULINT; //[mVArh]
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>